--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,29 +5,27 @@
 
 ################ ACTUATOR STARTS ##################
 management.endpoints.enabled-by-default=true
-# expose all endpoints
 management.endpoints.web.exposure.include=*
-#shows more information
 management.endpoint.health.show-details=always
+management.health.custom.enabled=true
 
-#management.server.port=9000
+management.server.port=9000
 
 # populate /info
 info.app.encoding=UTF-8
 info.app.java.source=@java.version@
 info.app.java.target=@java.version@
 info.app.developers.abc=Alhagie Bai Cham
-info.app.developers.jj=Jerome Joof
 ################ ACTUATOR ENDS ##################
 
 ###############  JPA STARTS ####################
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
 ###############  JPA ENDS ####################
 
 ################ MYSQL STARTS ###################
-spring.datasource.url=jdbc:mysql://localhost:${db_port}/${db_name}
-spring.datasource.username=${mysql_username}
-spring.datasource.password=${mysql_password}
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.datasource.url=jdbc:mysql://localhost:${db_port}/${db_name}
+#spring.datasource.username=${mysql_username}
+#spring.datasource.password=${mysql_password}
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 ################ MYSQL ENDS ###################
