--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>api-demo</description>
     <properties>
         <java.version>11</java.version>
+        <jwt-version>0.11.2</jwt-version>
     </properties>
     <dependencies>
         <dependency>
@@ -63,6 +64,23 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-api</artifactId>
+            <version>${jwt-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-impl</artifactId>
+            <version>${jwt-version}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson if Gson is preferred -->
+            <version>${jwt-version}</version>
+            <scope>runtime</scope>
         </dependency>
 
     </dependencies>
