move some properties into application.properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,16 @@ info.app.developers.abc=Alhagie Bai Cham
 #spring.datasource.password=${mysql_password}
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 ################ MYSQL ENDS ###################
+
+################ MONGO_DB BEGINS ###################
+spring.data.mongodb.auto-index-creation=true
+################ MONGO_DB ENDS   ###################
+
+
+### JWT
+application.jwt.secretKey=securityissuperimportantsodontmesswithit
+application.jwt.tokenPrefix=Bearer 
+application.jwt.tokenExpirationAfterDays=14
+application.jwt.authority=authority
+application.jwt.authorization=Authorization
+application.jwt.empty=
