--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,6 +34,18 @@ info.app.developers.abc=Alhagie Bai Cham
 spring.data.mongodb.auto-index-creation=true
 ################ MONGO_DB ENDS   ###################
 
+############## SENDMAIL STARTS ################
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${email}
+spring.mail.password=${password}
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.starttls.enable=true
+############## SENDMAIL ENDS################
 
 ### JWT
 application.jwt.secretKey=securityissuperimportantsodontmesswithit
