--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
             <version>${jwt-version}</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
