--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.abc</groupId>
-    <artifactId>api-demo</artifactId>
+    <artifactId>api-security</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>api-demo</name>
-    <description>api-demo</description>
+    <name>api-security</name>
+    <description>Implement spring security</description>
     <properties>
         <java.version>11</java.version>
         <jwt-version>0.11.2</jwt-version>
