--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+server.port=8080
+server.servlet.context-path=/security
+
 ################# SECURITY  STARTS ################
 #spring.security.user.name=admin
 #spring.security.user.password=admin
@@ -9,7 +12,7 @@ management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 management.health.custom.enabled=true
 
-management.server.port=9000
+#management.server.port=9000
 
 # populate /info
 info.app.encoding=UTF-8
