--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,4 @@ build/
 .vscode/
 
 ####### bootstrap #####
-./src/main/java/com/abc/api/security/boostrap/BootstrapUsers.java
+./src/main/java/com/abc/api/security/boostrap/
