refactor and add chaos monkey testing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8080
 
 ################ ACTUATOR STARTS ##################
 management.endpoints.enabled-by-default=true
-management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=health,info,chaosmonkey
 management.endpoint.health.show-details=always
 management.health.custom.enabled=true
 
@@ -57,3 +57,11 @@ application.jwt.tokenExpirationAfterDays=14
 application.jwt.authority=authority
 application.jwt.authorization=Authorization
 application.jwt.empty=
+
+spring.profiles.active=chaos-monkey
+
+chaos.monkey.watcher.controller=false
+chaos.monkey.watcher.restController=false
+chaos.monkey.watcher.service=false
+chaos.monkey.watcher.repository=false
+chaos.monkey.watcher.component=true
