refactor and add bootstrap files using PostConstruct and PreDestroy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,10 +14,13 @@ management.health.custom.enabled=true
 #management.server.port=9000
 
 # populate /info
-info.app.encoding=UTF-8
-info.app.java.source=@java.version@
-info.app.java.target=@java.version@
-info.app.developers.abc=Alhagie Bai Cham
+info.application.encoding=UTF-8
+info.application.java.source=@java.version@
+info.application.java.target=@java.version@
+info.application.developer.abc=Alhagie Bai Cham
+info.application.name=@project.artifactId@
+info.application.description=@project.description@
+info.application.version=@project.version@
 ################ ACTUATOR ENDS ##################
 
 ###############  JPA STARTS ####################
@@ -36,7 +39,7 @@ info.app.developers.abc=Alhagie Bai Cham
 spring.data.mongodb.auto-index-creation=true
 ################ MONGO_DB ENDS   ###################
 
-##############SENDMAIL BEGINS################
+############## SENDMAIL BEGINS ################
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${email}
@@ -48,16 +51,18 @@ spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
 email.from=${from}
-##############SENDMAIL ENDS################
+############## SENDMAIL ENDS ################
 
-### JWT
+############## JWT STARTS ################
 application.jwt.secretKey=securityissuperimportantsodontmesswithit
 application.jwt.tokenPrefix=Bearer 
 application.jwt.tokenExpirationAfterDays=14
 application.jwt.authority=authority
 application.jwt.authorization=Authorization
 application.jwt.empty=
+############## JWT ENDS ################
 
+############## CHAOS MONKEY ################
 spring.profiles.active=chaos-monkey
 
 chaos.monkey.watcher.controller=false
@@ -65,3 +70,4 @@ chaos.monkey.watcher.restController=false
 chaos.monkey.watcher.service=false
 chaos.monkey.watcher.repository=false
 chaos.monkey.watcher.component=true
+############## CHAOS MONKEY ################
