redis installation required. redis caching enable for performance

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,7 +62,7 @@ application.jwt.authorization=Authorization
 application.jwt.empty=
 ############## JWT ENDS ################
 
-############## CHAOS MONKEY ################
+############## CHAOS MONKEY STARTS ################
 spring.profiles.active=chaos-monkey
 
 chaos.monkey.watcher.controller=false
@@ -70,4 +70,10 @@ chaos.monkey.watcher.restController=false
 chaos.monkey.watcher.service=false
 chaos.monkey.watcher.repository=false
 chaos.monkey.watcher.component=true
-############## CHAOS MONKEY ################
+############## CHAOS MONKEY ENDS################
+
+############## REDIS STARTS ################
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
+############## REDIS ENDS ################
