update jwt token life to 5 minutes, and added git plugin to add git info /actuator/info

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,12 +8,14 @@ server.port=8080
 ################ ACTUATOR STARTS ##################
 management.endpoints.enabled-by-default=true
 management.endpoints.web.exposure.include=health,info,chaosmonkey
-management.endpoint.health.show-details=always
+management.endpoint.health.show-details=when-authorized
 management.health.custom.enabled=true
 
 #management.server.port=9000
 
 # populate /info
+management.info.git.enabled=true
+management.info.git.mode=full
 info.application.encoding=UTF-8
 info.application.java.source=@java.version@
 info.application.java.target=@java.version@
@@ -56,7 +58,7 @@ email.from=${from}
 ############## JWT STARTS ################
 application.jwt.secretKey=securityissuperimportantsodontmesswithit
 application.jwt.tokenPrefix=Bearer 
-application.jwt.tokenExpirationAfterDays=14
+application.jwt.tokenExpirationAfterDays=1
 application.jwt.authority=authority
 application.jwt.authorization=Authorization
 application.jwt.empty=
