--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,8 @@ management.info.git.mode=full
 info.application.encoding=UTF-8
 info.application.java.source=@java.version@
 info.application.java.target=@java.version@
-info.application.developer.abc=Alhagie Bai Cham
+info.application.developer.name=Alhagie Bai Cham
+info.application.developer.id=@developer.name@
 info.application.name=@project.artifactId@
 info.application.description=@project.description@
 info.application.version=@project.version@
