--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.port=8085
 ################ ACTUATOR STARTS ##################
 management.endpoints.enabled-by-default=true
 management.endpoints.web.exposure.include=health,info,chaosmonkey
-management.endpoint.health.show-details=when_authorized
+management.endpoint.health.show-details=always
 management.health.custom.enabled=true
 
 #management.server.port=9000
