--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 server.port=8085
-
 ################# SECURITY  STARTS ################
 #spring.security.user.name=admin
 #spring.security.user.password=admin
@@ -8,7 +7,7 @@ server.port=8085
 ################ ACTUATOR STARTS ##################
 management.endpoints.enabled-by-default=true
 management.endpoints.web.exposure.include=health,info,chaosmonkey
-management.endpoint.health.show-details=when_authorized
+management.endpoint.health.show-details=always
 management.health.custom.enabled=true
 
 #management.server.port=9000
